Restrict `COPY FROM` using local files to superuser
Fixing a security issue where any user could read/import content
of any file on the host system, the CrateDB process user has read
access to.

(cherry picked from commit 4e857d675683095945dd524d6ba03e692c70ecd6)